tests/baselines/reference/preserveValueImports_mixedImports.errors.txt
error TS5101: Flag 'preserveValueImports' is deprecated and will stop functioning in TypeScript 5.5. Specify 'ignoreDeprecations: "5.0"' to silence this error.
  Use 'verbatimModuleSyntax' instead.
/index.ts(1,21): error TS1444: 'ComponentProps' is a type and must be imported using a type-only import when 'preserveValueImports' and 'isolatedModules' are both enabled.


!!! error TS5101: Flag 'preserveValueImports' is deprecated and will stop functioning in TypeScript 5.5. Specify 'ignoreDeprecations: "5.0"' to silence this error.
!!! error TS5101:   Use 'verbatimModuleSyntax' instead.
==== /exports.ts (0 errors) ====
    export function Component() {}
    export interface ComponentProps {}
    
==== /index.ts (1 errors) ====
    import { Component, ComponentProps } from "./exports.js";
                        ~~~~~~~~~~~~~~
!!! error TS1444: 'ComponentProps' is a type and must be imported using a type-only import when 'preserveValueImports' and 'isolatedModules' are both enabled.
    
==== /index.fixed.ts (0 errors) ====
    import { Component, type ComponentProps } from "./exports.js";
    